sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:35: error: not found: value swapped
    if(!a) swapped = false
           ^